@@ -1,27 +1,24 @@
 package thws.librarymanager.adapters.in.rest;
 
-
 import java.net.URI;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import jakarta.inject.Inject;
+import jakarta.transaction.Transactional;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.*;
 
-
 import thws.librarymanager.adapters.in.rest.mapper.RestMapper;
 import thws.librarymanager.adapters.in.rest.models.LibraryDTO;
+import thws.librarymanager.adapters.in.rest.util.ETagGenerator; // ➕ EKLENDİ (ETag için)
 import thws.librarymanager.adapters.in.rest.util.LibraryServiceLogger;
 import thws.librarymanager.application.domain.models.Library;
 import thws.librarymanager.application.ports.in.LibraryUseCase;
 
-
 @Path("/libraries")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
-public class LibraryController extends BaseController{
+public class LibraryController extends BaseController {
 
     @Inject
     LibraryUseCase libraryUseCase;
@@ -31,6 +28,9 @@ public class LibraryController extends BaseController{
 
     @Context
     UriInfo uriInfo;
+
+    @Context
+    Request request;
 
 
     @GET
@@ -42,62 +42,44 @@ public class LibraryController extends BaseController{
         List<LibraryDTO> dtos = libraryUseCase
                 .getAllLibraries(location, name)
                 .stream()
-                .map(lib -> mapper.toLibraryDTO(lib))
-                .collect(Collectors.toList());
+                .map(mapper::toLibraryDTO)
+                .toList();
 
         LibraryServiceLogger.logGetAll();
 
         Response.ResponseBuilder rb = Response.ok(dtos);
-
         addLink(rb, uriInfo.getAbsolutePath(), "self");
 
         CacheControl cc = new CacheControl();
-        cc.setMaxAge(60);
-        cc.setPrivate(false);
+        cc.setPrivate(true);
+        cc.setMaxAge(30);
         rb.cacheControl(cc);
 
         return rb.build();
     }
 
-//
-/*    @GET
-    public Response getAllLibraries(
-            @QueryParam("location") String location,
-            @QueryParam("name") String name) {
-
-
-        List<Library> libraries = libraryUseCase.getAllLibraries(location, name);
-        List<LibraryDTO> dtos = libraries.stream()
-                .map(lib -> mapper.toLibraryDTO(lib))
-                .collect(Collectors.toList());
-
-        LibraryServiceLogger.logGetAll();
-
-        Response.ResponseBuilder rb = Response.ok(dtos);
-
-        addLink(rb, uriInfo.getAbsolutePath(), "self");
-
-        CacheControl cc = new CacheControl();
-        cc.setMaxAge(60);
-        cc.setPrivate(false);
-        rb.cacheControl(cc);
-
-        return rb.build();
-    }*/
 
     @GET
     @Path("/{id}")
+    @Transactional
     public Response getLibraryById(@PathParam("id") Long id) {
 
-        Optional<Library> library = libraryUseCase.getLibraryById(id);
+        Library library = libraryUseCase.getLibraryById(id)
+                .orElseThrow(() -> new NotFoundException("Library not found")); // 🔧 DEĞİŞTİRİLDİ
 
-        if (library.isEmpty()) {
-            return Response.status(Response.Status.NOT_FOUND).build();
+
+        EntityTag etag = new EntityTag(ETagGenerator.fromLibrary(library));
+
+        Response.ResponseBuilder precond =
+                request.evaluatePreconditions(etag);
+
+        if (precond != null) {
+            return precond.build();
         }
 
-        LibraryDTO dto = mapper.toLibraryDTO(library.get());
-
+        LibraryDTO dto = mapper.toLibraryDTO(library);
         Response.ResponseBuilder rb = Response.ok(dto);
+
         URI selfUri = uriInfo.getAbsolutePath();
         addLink(rb, selfUri, "self");
         addLink(rb, selfUri, "update");
@@ -111,15 +93,17 @@ public class LibraryController extends BaseController{
 
         CacheControl cacheControl = new CacheControl();
         cacheControl.setPrivate(true);
-        cacheControl.setMaxAge(30);
+        cacheControl.setMaxAge(60);
         rb.cacheControl(cacheControl);
 
         LibraryServiceLogger.logGetAll();
 
-        return rb.build();
+        return rb.tag(etag).build();
     }
 
+
     @POST
+    @Transactional
     public Response addLibrary(LibraryDTO dto) {
 
         Library library = new Library(
@@ -138,46 +122,58 @@ public class LibraryController extends BaseController{
         Response.ResponseBuilder rb = Response.created(uri);
         addLink(rb, uri, "self");
 
-        return rb.entity(mapper.toLibraryDTO(saved)).build(); // 201 CREATED
+        return rb.entity(mapper.toLibraryDTO(saved)).build();
     }
-
 
 
     @PUT
     @Path("/{id}")
+    @Transactional
     public Response updateLibrary(
             @PathParam("id") Long id,
-            LibraryDTO dto) {
+            LibraryDTO dto
+    ) {
 
-        libraryUseCase.updateLibrary(
-                id,
-                dto.getName(),
-                dto.getLocation()
-        );
+        Library existing = libraryUseCase.getLibraryById(id)
+                .orElseThrow(() -> new NotFoundException("Library not found"));
+
+        EntityTag etag = new EntityTag(ETagGenerator.fromLibrary(existing));
+        Response.ResponseBuilder precond =
+                request.evaluatePreconditions(etag);
+
+        if (precond != null) {
+            return precond.build();
+        }
+
+        libraryUseCase.updateLibrary(id, dto.getName(), dto.getLocation());
 
         Response.ResponseBuilder rb = Response.noContent();
         addLink(rb, uriInfo.getAbsolutePath(), "self");
 
-        return rb.build();
+        EntityTag newTag = new EntityTag(
+                ETagGenerator.fromLibrary(
+                        libraryUseCase.getLibraryById(id).get()
+                )
+        );
+
+        return rb.tag(newTag).build();
     }
+
 
     @DELETE
     @Path("/{id}")
+    @Transactional
     public Response deleteLibrary(@PathParam("id") Long id) {
 
         libraryUseCase.deleteLibrary(id);
-
-        URI collectionUri = uriInfo.getBaseUriBuilder().path(LibraryController.class).build();
-        Response.ResponseBuilder rb = Response.noContent();
-        addLink(rb, collectionUri, "collection");
-
-        return rb.build();
+        return Response.noContent().build();
     }
 
 
     @POST
     @Path("/{libraryId}/books/{isbn}")
     @Consumes(MediaType.WILDCARD)
+    @Transactional
     public Response addBookToLibrary(
             @PathParam("libraryId") Long libraryId,
             @PathParam("isbn") Long isbn) {
@@ -195,17 +191,19 @@ public class LibraryController extends BaseController{
         return rb.build();
     }
 
+
     @DELETE
     @Path("/{libraryId}/books/{isbn}")
     @Consumes(MediaType.WILDCARD)
+    @Transactional
     public Response removeBookFromLibrary(
             @PathParam("libraryId") Long libraryId,
             @PathParam("isbn") Long isbn) {
 
         libraryUseCase.removeBookFromLibrary(libraryId, isbn);
-
         return Response.noContent().build();
     }
+
 
     @GET
     @Path("/{libraryId}/books/count")
@@ -217,13 +215,10 @@ public class LibraryController extends BaseController{
         Response.ResponseBuilder rb = Response.ok(count);
 
         CacheControl cacheControl = new CacheControl();
-        cacheControl.setPrivate(true);  // library’ye özel
-        cacheControl.setMaxAge(30);      // 30 saniye
-
+        cacheControl.setPrivate(true);
+        cacheControl.setMaxAge(30);
         rb.cacheControl(cacheControl);
 
         return rb.build();
     }
-
-
 }
